# transfer_learning_study

./: README.md  download.sh  main.py  pyproject.toml
