[tool.poetry]
name = "transfer-learning-study"
version = "0.1.0"
description = ""
authors = [" guilherme-biscaino  < guilhermebs.bs2@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
keras = "^3.8.0"
tensorflow = "^2.18.0"
tf-keras = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
